# Frost

./: .gitignore  CMakeLists.txt  ChangeLog.txt  GitLog.txt  README.txt  TODO.txt  TargetPaths.txt  install.bat
Demos/: CMakeLists.txt  Demo  OutputLog.txt  build.bat  build.sh  demo.cpp  generic_tester.cpp
Demos/data/init/: extended_colors.json  init_data.json
Paths/: Project_Path.txt
Scrapped/: UIVariable.cpp  UIVariable.hpp  Window.cpp  Window.hpp
data/: Frost_font_data.json  Other_font_data.json
data/init/: base_colors.json  colors.json  init_data.json
include/: Color.h  ConsoleOutputHandler.h  Fr_Math.h  Fr_StringManip.h  FrostEngine.h  InputHandler.h  JsonHandler.h  ProgramOutputHandler.h  TextRenderingHandler.h  TextureHandler.h
include/Frost/: Color.hpp  ColorString.hpp  ConsoleOutputHandler.hpp  EventSystem.hpp  FileSystemHandler.hpp  Fr_IntLimits.hpp  Fr_Math.hpp  Fr_Random.hpp  Fr_StringManip.hpp  FrostEngine.hpp  InputHandler.hpp  Json.hpp  JsonHandler.hpp  Menu.hpp  MenuManager.hpp  ProgramOutputHandler.hpp  SparseSet.hpp  Sprite.hpp  SpriteHandler.hpp  TextFileHandler.hpp  TextRenderingHandler.hpp  TextureHandler.hpp  TimeObserver.hpp
include/Frost/Tilemap/: Component.hpp  EntityManager.hpp  test  test.cpp
include/Frost/UITools/: UIButton.hpp  UIChoice.hpp  UIDisplayTools.hpp  UIFloatVariable.hpp  UIIntVariable.hpp  UIItem.hpp  UIList.hpp  UISimulationContainers.hpp  UISimulationTools.hpp  UIStringVariable.hpp  UIText.hpp  UITextList.hpp  UIVariable.hpp
src/: ConsoleOutputHandler.cpp  EventSystem.cpp  FileSystemHandler.cpp  Fr_Math.cpp  Fr_Random.cpp  Fr_StringManip.cpp  FrostEngine.cpp  InputHandler.cpp  JsonHandler.cpp  Menu.cpp  MenuManager.cpp  ProgramOutputHandler.cpp  SpriteHandler.cpp  TextFileHandler.cpp  TextRenderingHandler.cpp  TextureHandler.cpp  TimeObserver.cpp
src/UITools/: UIChoice.cpp  UIDisplayTools.cpp  UIFloatVariable.cpp  UIIntVariable.cpp  UIItem.cpp  UIList.cpp  UISimulationTools.cpp  UIStringVariable.cpp  UIText.cpp  UITextList.cpp  UIVariable.cpp
